# UltimaScraperDB

./: .gitignore  pyproject.toml  start.py
ultima_scraper_db/: __init__.py  helpers.py
ultima_scraper_db/databases/: rest_api.py
ultima_scraper_db/databases/ultima/: __init__.py  alembic.ini
ultima_scraper_db/databases/ultima/alembic/: env.py
ultima_scraper_db/databases/ultima/alembic/versions/: 3ead48a37e21_.py  6ce7339b93e7_.py  6d7d283707a8_.py
ultima_scraper_db/databases/ultima/schemas/: management.py
ultima_scraper_db/databases/ultima/schemas/templates/: site.py
ultima_scraper_db/databases/ultima_archive/: __init__.py  database_api.py  filters.py  management_api.py  site_api.py
ultima_scraper_db/databases/ultima_archive/alembic/: env.py
ultima_scraper_db/databases/ultima_archive/alembic/versions/: 358d71fc1759_.py  47bb57ce9f7d_.py  6c478d2fd92a_.py  ac840f4e3061_.py
ultima_scraper_db/databases/ultima_archive/api/: app.py  client.py
ultima_scraper_db/databases/ultima_archive/api/routers/: client.py  filepaths.py  hosts.py  jobs.py  media_detections.py  notifications.py  remote_urls.py  search.py  sites.py  users.py
ultima_scraper_db/databases/ultima_archive/schemas/: management.py
ultima_scraper_db/databases/ultima_archive/schemas/templates/: site.py
ultima_scraper_db/managers/: database_manager.py  site_db.py
