[tool.poetry]
name = "ultima-scraper-db"
version = "0.1.1"
description = ""
authors = ["CRIMINAL <89371864+DIGITALCRIMINALS@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "ultima_scraper_db" }]
include = ["ultima_scraper_db/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.16"}
asyncpg = "^0.27.0"
psycopg = "^3.1.9"
ultima-scraper-api = "^2.0.0"
ultima-scraper-collection = "^2.0.0"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.11.1"
sshtunnel = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
